# template

./: CMakeLists.txt  README.md  build.sh
protobuf/: test.proto
src/: CMakeLists.txt  main.cpp  util.cpp  util.hpp
src/protobuf/: CMakeLists.txt
